src/main/java/org/example/Solid/good/d/DIP_good.java
package org.example.Solid.good.d;

public class DIP_good {
}
