src/main/java/org/example/Solid/bad/d/DIP_bad.java
package org.example.Solid.bad.d;

public class DIP_bad {
}
